# Computer_Graphics

./: .gitignore  README.md
314553040-Final Project/: MUJOCO_LOG.TXT  README.md
314553040-Final Project/assets/Wooden_Dining_Chair/: Wooden_Dining_Chair.mtl
314553040-Final Project/assets/horse/: horse.mtl
314553040-Final Project/assets/microwave/: microwave.mtl
314553040-Final Project/assets/venice/: _combined.xml  material_horse.mtl  venice_move43.xml
314553040-Final Project/scenes/: basic.xml
314553040-Final Project/src/: editor.py
Final Project/: README.md
Final Project/assets/microwave/: Microwave.fbx
Final Project/assets/venice/: _combined.xml  material.mtl  venice.xml  venice_exploded.xml
Final Project/src/: editor.py
Render a 3D Mesh/: README.md
Render a 3D Mesh/Computer_Graphics_hw1/: Computer_Graphics_hw1.sln
Render a 3D Mesh/Computer_Graphics_hw1/Computer_Graphics_hw1/: Computer_Graphics_hw1.vcxproj  Computer_Graphics_hw1.vcxproj.filters  README.md  config.h  glad.c  main.cpp
Render a 3D Mesh/Computer_Graphics_hw1/Computer_Graphics_hw1/x64/Debug/: Computer_Graphics_hw1.exe.recipe  main.new.obj.enc  vc143.idb
Render a 3D Mesh/Computer_Graphics_hw1/Computer_Graphics_hw1/x64/Debug/Computer.5db95ca0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Computer_Graphics_hw1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Texture a mesh/: CMakeLists.txt  README.md
Texture a mesh/src/: camera.h  main.cpp
Texture a mesh/src/shaders/: mesh.frag
Textured Campus Scene Animation/: CMakeLists.txt  README.md
Textured Campus Scene Animation/assets/SchoolSceneDay/: SchoolSceneDay.mtl
Textured Campus Scene Animation/shaders/: fragment_shader.fs  vertex_shader.vs
Textured Campus Scene Animation/src/: camera.h  main.cpp  model.cpp  model.h  shader.cpp  shader.h  texture_cache.cpp  texture_cache.h
